--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -944,6 +944,6 @@ body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
 	}
 }
 
-.document-follow{
+.followed-by-label{
 	margin-top: 30px;
 }
