--- a/frappe/templates/emails/doc_subscription.html
+++ b/frappe/templates/emails/doc_subscription.html
@@ -23,10 +23,58 @@
 		<td width="15"></td>
 		<td>
 			<div>
-				<ul class="list-unstyled" style="line-height: 1.6">
+				<ul class="list-unstyled" style="line-height: 1.7">
 					{% for data in timeline %}
 						{% if (data.doctype == doc.ref_doctype and data.doc_name == doc.ref_docname) %}
-							{{data.content}}
+							{% if data.type == "comment" %}
+								<li>
+									<span style ='color:#8d99a6!important'>
+										{{data.data.time}}:
+									</span>
+									<b>"{{data.data.comment}}"</b>
+									commented By:
+									<b>{{data.data.by}}</b>
+								</li>
+							{% elif data.type == "row added" %}
+								<li>
+									<span style ='color:#8d99a6!important'>
+										{{data.data.time}}:
+									</span>
+									Row Added to Table Field
+									<b>{{data.data.to}}</b>
+								</li>
+							{% elif data.type == "field changed" %}
+								<li>
+									<span style ='color:#8d99a6!important'>
+										{{data.data.time}}:
+									</span>Field:
+									<b>"{{data.data.field}}"</b>
+									changed from
+									<b>"{{data.data.from}}"</b>
+									to
+									<b>"{{data.data.to}}"</b>
+								</li>
+							{% elif data.type == "activity" %}
+								<li>
+									<span style ='color:#8d99a6!important'>
+										{{data.data.time}}:
+									</span>
+									{{data.data.activity}}
+								</li>
+							{% elif data.type == "row changed" %}
+								<li>
+									<span style ='color:#8d99a6!important'>
+										{{data.data.time}}:
+									</span>
+									Table Field:
+									<b>"{{data.data.table_field}}"</b>
+									Row# {{data.data.row}} Field:
+									<b>"{{data.data.field}}"</b>
+									changed from
+									<b>"{{data.data.from}}" </b>
+									to <b>"{{data.data.to}}"</b>
+								</li>
+							{% endif %}
 						{% endif %}
 					{% endfor %}
 				</ul>
