--- a/frappe/templates/includes/navbar/navbar_login.html
+++ b/frappe/templates/includes/navbar/navbar_login.html
@@ -1,23 +1,29 @@
 <!-- post login tools -->
 {% if not only_static %}
-<li class="dropdown logged-in" id="website-post-login" data-label="website-post-login" style="display: none">
-	<a href="#" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">
-		<span class="user-image-wrapper"></span>
-		<span class="full-name"></span>
-		<b class="caret"></b>
-	</a>
-	<ul class="dropdown-menu dropdown-menu-right" role="menu">
-		{%- for child in post_login -%}
-		{%- if child.url -%}
-		<a class="dropdown-item" href="{{ child.url | abs_url }}" {{ child.target or '' }} rel="nofollow">
-			{{ child.label }}
+
+	{% if frappe.session.user != 'Guest' %}
+	<li class="nav-item dropdown logged-in" id="website-post-login" data-label="website-post-login" style="display: none">
+		<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
+			<span class="user-image-wrapper"></span>
+			<span class="full-name"></span>
+			<b class="caret"></b>
 		</a>
-		{%- endif -%}
-		{%- endfor -%}
-		<a class="dropdown-item switch-to-desk hidden" href="/desk">{{ _('Switch To Desk') }}</a>
-	</ul>
-</li>
-{% if not hide_login %}
-<a class="dropdown-item btn-login-area" href="/login">{{ _("Login") }}</a>
-{% endif %}
+		<ul class="dropdown-menu dropdown-menu-right" role="menu">
+			{%- for child in post_login -%}
+			{%- if child.url -%}
+			<a class="dropdown-item" href="{{ child.url | abs_url }}" {{ child.target or '' }} rel="nofollow">
+				{{ child.label }}
+			</a>
+			{%- endif -%}
+			{%- endfor -%}
+			<a class="dropdown-item switch-to-desk hidden" href="/desk">{{ _('Switch To Desk') }}</a>
+		</ul>
+	</li>
+	{% endif %}
+
+	{% if not hide_login %}
+	<li class="nav-item">
+		<a class="nav-link btn-login-area" href="/login">{{ _("Login") }}</a>
+	</li>
+	{% endif %}
 {% endif %}
