--- a/frappe/templates/web.html
+++ b/frappe/templates/web.html
@@ -37,8 +37,10 @@ id="page-{{ name or route }}" data-path="{{ pathname }}" {%- if page_or_generato
 {% if show_sidebar %}
 <div class="container">
 	<div class="row" {{ container_attributes() }}>
-			<div class="pt-4 col-sm-2 border-right sidebar-column">
+			<div class="pt-4 col-sm-2 border-right sidebar-column d-none d-sm-block">
+				{% block page_sidebar %}
 				{% include "templates/includes/web_sidebar.html" %}
+				{% endblock %}
 			</div>
 		<div class="col-sm-10 main-column">
 			{{ main_content() }}
