--- a/frappe/templates/base.html
+++ b/frappe/templates/base.html
@@ -24,6 +24,13 @@
 		{% if head_html is defined -%}
 		{{ head_html or "" }}
 		{%- endif %}
+
+		{% if theme.css_file_url %}
+		<link type="text/css" rel="stylesheet" href="{{ theme.css_file_url }}">
+		{% else %}
+		<link type="text/css" rel="stylesheet" href="/assets/css/frappe-web-b4.css">
+		{% endif %}
+
 		{%- for link in web_include_css %}
 		<link type="text/css" rel="stylesheet" href="{{ link|abs_url }}">
 		{%- endfor -%}
