--- a/frappe/templates/base.html
+++ b/frappe/templates/base.html
@@ -25,8 +25,8 @@
 		{{ head_html or "" }}
 		{%- endif %}
 
-		{% if theme.css_file_url %}
-		<link type="text/css" rel="stylesheet" href="{{ theme.css_file_url }}">
+		{% if theme.apply_custom_theme and theme.custom_theme_url %}
+		<link type="text/css" rel="stylesheet" href="{{ theme.custom_theme_url }}">
 		{% else %}
 		<link type="text/css" rel="stylesheet" href="/assets/css/frappe-web-b4.css">
 		{% endif %}
