fix: Bootstrap 4 class fixes

--- a/frappe/templates/includes/comments/comments.html
+++ b/frappe/templates/includes/comments/comments.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div class="comment-form-wrapper">
-		<a class="add-comment btn btn-light btn-xs">{{ _("Add Comment") }}</a>
+		<a class="add-comment btn btn-light btn-sm">{{ _("Add Comment") }}</a>
 			<div style="display: none;" id="comment-form">
 			<p>{{ _("Leave a Comment") }}</p>
 			<div class="alert" style="display:none;"></div>
