--- a/frappe/templates/includes/meta_block.html
+++ b/frappe/templates/includes/meta_block.html
@@ -1,11 +1,12 @@
 {%- if metatags -%}
 {%- for name in metatags %}
-<meta {% if name.startswith('og:') %} property="{{ name }}" {% else %} name="{{ name }}" {% endif %}  content="{{ metatags[name]|striptags|escape }}">
+<meta
+	{% if name.startswith('og:') %}
+	property="{{ name }}"
+	{% else %}
+	name="{{ name }}"
+	{% endif %}
+	content="{{ metatags[name] | striptags | escape }}"
+>
 {%- endfor -%}
-<meta property="og:url" content="{{ frappe.utils.get_url(path) }}">
-<meta itemprop="datePublished" content="{{ frappe.format_date(published_on) }}">
-<meta itemprop="author" content="{{ blogger }}">
-<meta itemprop="name" content="{{ name }}">
-<meta itemprop="description" content="{{ description }}">
-<meta itemprop="image" content="{{ frappe.utils.get_url(metatags["image"]) }}">
 {%- endif -%}
