added optimized code

--- a/frappe/templates/emails/delete_data_confirmation.html
+++ b/frappe/templates/emails/delete_data_confirmation.html
@@ -6,4 +6,6 @@
 <p style="margin: 30px 0px;">
     <a href="{{ link }}" rel="nofollow" class="btn btn-primary btn-sm primary-action" style="padding: 8px 20px;">{{ _("Confirm Request") }}</a>
 </p>
-<p style="font-size: 85%;">{{_("You can also copy-paste this link in your browser")}} <a href="{{ link }}">{{ link }}</a></p>
+<p style="font-size: 85%;">
+    {{_("You can also copy-paste this ")}} <a href="{{ link }}">{{_("Verification Link")}}</a>{{_(" to your browser")}}
+</p>
