--- a/frappe/templates/emails/download_data.html
+++ b/frappe/templates/emails/download_data.html
@@ -5,4 +5,6 @@
 <p style="margin: 30px 0px;">
     <a href="{{ link }}" rel="nofollow" class="btn btn-primary btn-sm primary-action" style="padding: 8px 20px;">{{ _("Download Data") }}</a>
 </p>
-<p style="font-size: 85%;">{{_("You can also Right Click > Copy the ")}} <a href="{{ link }}">{{_("Download Link")}}</a>{{_("and paste it to your browser")}}</p>
+<p style="font-size: 85%;">
+    {{_("You can also copy-paste this ")}} <a href="{{ link }}">{{_("Download Link")}}</a>{{_(" to your browser")}}
+</p>
