--- a/frappe/templates/base.html
+++ b/frappe/templates/base.html
@@ -16,9 +16,15 @@
     {% endblock %}
 	{%- block head -%}
 		{% block meta_block %}{% endblock %}
+
 		{% if head_html is defined -%}
 		{{ head_html or "" }}
 		{%- endif %}
+
+		{% for key in meta %}
+		{% if meta[key] %}<meta name="{{ key }}" content="{{ meta[key] }}" />{% endif %}
+		{% endfor %}
+
 		{%- for link in web_include_css %}
 		<link type="text/css" rel="stylesheet" href="{{ link|abs_url }}">
 		{%- endfor -%}
