--- a/frappe/templates/base.html
+++ b/frappe/templates/base.html
@@ -21,9 +21,11 @@
 		{{ head_html or "" }}
 		{%- endif %}
 
-		{% for key in meta %}
-		{% if meta[key] %}<meta name="{{ key }}" content="{{ meta[key] }}" />{% endif %}
-		{% endfor %}
+		{% if meta_tags %}
+			{% for key in meta_tags %}
+			{% if meta[key] %}<meta name="{{ key }}" content="{{ meta[key] }}" />{% endif %}
+			{% endfor %}
+		{% endif %}
 
 		{%- for link in web_include_css %}
 		<link type="text/css" rel="stylesheet" href="{{ link|abs_url }}">
