fix: button alignment on web-form

--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -27,7 +27,7 @@
 	</div>
 	{% endif %}
 	{% if is_list %}
-	<div style="padding-bottom: 15px;">
+	<div class="text-right" style="padding-bottom: 15px;">
 	    <a href="/{{ pathname }}{{ delimeter }}new=1{{ params_from_form_dict}}" class="btn btn-primary btn-new btn-sm">
 	    {{ _("New") }}
 		</a>
