fix: replace product name with hostname

--- a/frappe/templates/emails/delete_data_confirmation.html
+++ b/frappe/templates/emails/delete_data_confirmation.html
@@ -1,5 +1,5 @@
 <p>{{_("Dear User,")}}</p>
-<p>{{_("We have received a request for deletion of ERPNext data associated with: {0}").format(email)}}.</p>
+<p>{{_("We have received a request for deletion of {0} data associated with: {1}").format(host_name, email)}}.</p>
 <p>{{_("This will permanently remove your data.")}}</b>
 <p>{{_("Click on the link below to verify your request")}}.</p>
 
