--- a/frappe/templates/emails/download_data.html
+++ b/frappe/templates/emails/download_data.html
@@ -1,5 +1,5 @@
 <p>{{_("Dear {0}").format(user_name)}},</p>
-<p>{{_("We have received a request from you to download your ERPNext data associated with: {0}").format(user)}}.</p>
+<p>{{_("We have received a request from you to download your {0} data associated with: {1}").format(host_name, user)}}.</p>
 <p>{{_("Click on the link below to download your data")}}.</p>
 
 <p style="margin: 30px 0px;">
