--- a/frappe/public/less/calendar.less
+++ b/frappe/public/less/calendar.less
@@ -134,14 +134,18 @@ th.fc-day-header {
 	min-width: 100px;
 	padding: 0px;
 	z-index: 2;
+	border: 3;
 
 }
+
+.popover{
+	border: 1px solid rgba(0, 0, 0, .2);
+	border-radius: 3px;
+}
 .popover-content{
-	padding: "0 0 0 0"
+	padding: "0 0 0 0" !important
 }
-.popover-content > div > h4{
-	margin-top: 0
-}
-.popover-content > div > h6{
-	margin-top: -5px
+.popover-content > div > p{
+	margin-top: 0;
+	margin-bottom: 0;
 }
