--- a/frappe/public/css/bootstrap.css
+++ b/frappe/public/css/bootstrap.css
@@ -5953,9 +5953,9 @@ button.close {
   border-bottom: 1px solid #ebebeb;
   border-radius: 5px 5px 0 0;
 }
-.popover-content {
+/*.popover-content {
   padding: 9px 14px;
-}
+}*/
 .popover > .arrow,
 .popover > .arrow:after {
   position: absolute;
