--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -3,7 +3,7 @@
 {% block title %}{{ _(title) }}{% endblock %}
 
 {% block header %}
-<h1>{{ _(title) }}</h1>
+<h2>{{ _(title) }}</h2>
 {% endblock %}
 
 
@@ -27,11 +27,11 @@
 	</div>
 	{% endif %}
 	{% if is_list %}
-	<div class="text-right" style="padding-bottom: 15px;">
-	    <a href="/{{ pathname }}{{ delimeter }}new=1{{ params_from_form_dict}}" class="btn btn-primary btn-new btn-sm">
+	<div class="text-right mt-2">
+	    <a href="/{{ pathname }}{{ delimeter }}new=1{{ params_from_form_dict}}" class="btn btn-primary btn-new">
 	    {{ _("New") }}
 		</a>
-		<button class="btn btn-danger btn-delete btn-sm">
+		<button class="btn btn-danger btn-delete">
 			{{ _("Delete") }}
 		</button>
 	</div>
