--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -46,12 +46,14 @@
 {% endblock %}
 
 {% block page_content %}
-<div class="introduction">
-	{% if introduction_text %}
-	<p class="text-muted">{{ _(introduction_text) }}</p>
-	{% endif %}
-</div>
-<div class="form-message hidden"></div>
+{% if introduction_text %}
+	<div class="introduction">
+		<p class="text-muted">{{ _(introduction_text) }}</p>
+	</div>
+{% else %}
+	<hr style="margin-top: 0;">
+{% endif %}
+<div class="form-message hide"></div>
 
 {% if _login_required %}
 <div class="login-required">
