--- a/frappe/public/less/calendar.less
+++ b/frappe/public/less/calendar.less
@@ -138,14 +138,26 @@ th.fc-day-header {
 
 }
 
-.popover{
+.popover {
 	border: 1px solid rgba(0, 0, 0, .2);
 	border-radius: 3px;
 }
-.popover-content{
+
+.popover-content {
 	padding: "0 0 0 0" !important
 }
-.popover-content > div > p{
+
+.popover-content > div > p {
 	margin-top: 0;
 	margin-bottom: 0;
+}
+
+.popover-header {
+	padding: 12px 14px;
+	border-bottom: 1px solid @border-color;
+	border-color: @border-color;
+}
+
+.popover-footer {
+	padding: 12px 14px;
 }
