--- a/frappe/public/scss/website.scss
+++ b/frappe/public/scss/website.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
 @import "multilevel-dropdown";
+@import "website-image";
 
 body {
 	font-size: 16px;
@@ -85,24 +86,4 @@ img {
 
 .indicator {
     font-size: inherit;
-}
-
-.standard-image {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: $border-radius;
-    border: 1px solid $border-color;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.lazy-image {
-	height: 300px;
-	background-color: $light;
-}
-
-.broken-image {
-	padding: 50% 0;
-	background-color: $light;
 }
