--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -141,7 +141,15 @@ a.badge-hover& {
 	}
 }
 
-.msgprint {
+.msgprint-dialog {
+	max-width: 400px;
+
+	.modal-content {
+		min-height: 140px;
+	}
+}
+
+.msgprint-content {
 	// margin: 15px 0px;
 	// text-align: center;
 	word-wrap: break-word;
