fix(tests): class msgprint used in tests

--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -149,7 +149,7 @@ a.badge-hover& {
 	}
 }
 
-.msgprint-content {
+.msgprint {
 	// margin: 15px 0px;
 	// text-align: center;
 	word-wrap: break-word;
