--- a/frappe/templates/includes/blog/blog.html
+++ b/frappe/templates/includes/blog/blog.html
@@ -16,4 +16,5 @@
 
 {% block script %}
 <script>{% include "templates/includes/list/list.js" %}</script>
+<script>{% include "templates/includes/list/hello.js" %}</script>
 {% endblock %}
