--- a/frappe/templates/includes/breadcrumbs.html
+++ b/frappe/templates/includes/breadcrumbs.html
@@ -7,6 +7,6 @@
 			</a>
 		</li>
 	{% endfor %}
-	<li class="active"><span itemprop="title">{{ title or "" }}</span></li>
+	<li class="active"><span itemprop="title">{{ doctype or title }}</span></li>
 </ul>
 {% endif %}
