feat: Added url to header for document

--- a/frappe/templates/emails/document_follow.html
+++ b/frappe/templates/emails/document_follow.html
@@ -10,7 +10,7 @@
 		<td width="15"></td>
 		<td>
 			<div class="text-medium text-muted">
-				<span>{{ doc.reference_doctype }}: {{doc.reference_docname }}</span>
+				<span><a href="{{doc.reference_url}}">{{ doc.reference_doctype }}: {{doc.reference_docname }}</a></span>
 			</div>
 		</td>
 		<td width="15"></td>
