feat: Document subscription (#6745)

--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -943,3 +943,7 @@ body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
 		}
 	}
 }
+
+.followed-by-label{
+	margin-top: 30px;
+}
