--- a/frappe/public/scss/website.scss
+++ b/frappe/public/scss/website.scss
@@ -66,6 +66,10 @@ img {
 	text-decoration: underline;
 }
 
+.text-extra-muted {
+	color: #d1d8dd !important;
+}
+
 .web-footer {
 	padding: 5rem 0;
 	min-height: 140px;
@@ -86,4 +90,13 @@ img {
 
 .indicator {
     font-size: inherit;
+}
+
+.rating {
+	.hover {
+		color: rgb(148, 148, 143) !important;
+	}
+	.click {
+		color: rgb(7, 7, 6) !important;
+	}
 }
