--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -77,3 +77,15 @@
 	margin-right: 5px;
 	margin-bottom: 5px;
 }
+
+.rating {
+	i {
+		color: @text-extra-muted;
+	}
+	.star-hover {
+		color: @text-muted;
+	}
+	.star-click {
+		color: @text-light;
+	}
+}
