--- a/frappe/public/less/sidebar.less
+++ b/frappe/public/less/sidebar.less
@@ -385,8 +385,7 @@ body[data-route^="Module"] .main-menu {
 		border: 1px solid #d2d8dd;
 		border-radius: 4px;
 		display: flex;
-		margin-right: 5px;
-		margin-bottom: 10px;
+		margin: 0 10px 10px 0;
 		.avatar {
 			padding: 0px;
 			margin: 0px;
@@ -400,5 +399,6 @@ body[data-route^="Module"] .main-menu {
 			align-self: center;
 			font-size: @text-small;
 		}
+		cursor: pointer;
 	}
 }
