--- a/frappe/templates/includes/comments/comment.html
+++ b/frappe/templates/includes/comments/comment.html
@@ -1,8 +1,8 @@
 {% from "frappe/templates/includes/macros.html" import square_image_with_fallback %}
 
 <div class="comment-row media">
-	{{ square_image_with_fallback(src=frappe.get_gravatar(comment.comment_email), size='48px', alt=comment.sender_full_name, class='align-self-start mr-3') }}
-	<div class="media-body">
+    {{ square_image_with_fallback(src=frappe.get_gravatar(comment.comment_email or comment.sender), size='48px', alt=comment.sender_full_name, class='align-self-start mr-3') }}
+    <div class="media-body">
         <div class="d-flex justify-content-between align-items-start">
             <span class="font-weight-bold text-muted">
                 {{ comment.sender_full_name }}
@@ -11,8 +11,8 @@
                 {{ comment.creation | global_date_format }}
             </span>
         </div>
-		<div class="text-muted">
+        <div class="text-muted">
             {{ comment.content | markdown }}
         </div>
-	</div>
+    </div>
 </div>
