--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1049,3 +1049,12 @@ img.img-loading:after {
 	font-family: 'Octicons';
 	content: "\f00b";
 }
+
+// popover
+.popover {
+	border-radius: 4px;
+}
+
+.popover-content {
+	padding: 12px;
+}
