--- a/frappe/public/less/sidebar.less
+++ b/frappe/public/less/sidebar.less
@@ -203,7 +203,7 @@ body[data-route^="Module"] .main-menu {
 	}
 }
 
-.form-sidebar .form-shared .share-doc-btn& {
+.form-sidebar .form-shared .share-doc-btn, .btn-add-review {
 	&:hover,
 	&:focus,
 	&:active {
@@ -380,6 +380,16 @@ body[data-route^="Module"] .main-menu {
 .review-list {
 	display: flex;
 	flex-wrap: wrap;
+
+	.btn-add-review {
+		cursor: pointer;
+
+		.octicon {
+			position: relative;
+			left: 4.5px;
+		}
+	}
+
 	.review-pill {
 		width: 50px;
 		border: 1px solid #d2d8dd;
@@ -400,5 +410,19 @@ body[data-route^="Module"] .main-menu {
 			font-size: @text-small;
 		}
 		cursor: pointer;
+	}
+}
+
+.review-popover  {
+	max-width: 150px;
+
+	.popover-content {
+		padding: 0;
+	}
+	.subject {
+		border-bottom: 1px solid @border-color;
+	}
+	.subject, .body {
+		padding: 12px;
 	}
 }
