--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -66,10 +66,15 @@
 }
 
 .table-multiselect.form-control input {
+	display: inline-block;
 	outline: none;
 	border: none;
 	padding: 0;
 	font-size: @text-medium;
+}
+
+.table-multiselect .awesomplete {
+	display: inline;
 }
 
 .tb-selected-value {
