feat(multiselect): add remove tag behaviour

--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -101,6 +101,7 @@
 	border: 1px solid @border-color;
 	border-radius: 4px;
 	padding: 5px;
+	padding-bottom: 0;
 
 	input {
 		border: none;
@@ -111,12 +112,13 @@
 	}
 }
 
-.shortened-input .awesomplete {
-	width: inherit;
-}
-
 .multiselect-tag {
 	display: flex;
 	margin-right: 5px;
 	margin-bottom: 5px;
+	height: 25px;
+}
+
+.shortened-input .awesomplete {
+	width: inherit;
 }
